--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,17 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Hello. I'm Jami Gibbs."
-email: 'jami0821@gmail.com'
-description: "I'm a software developer and designer from Chicago creating useful things for the web."
+title: "mallika parulekar "
+email: 'mallika.parulekar@berkeley.edu'
+description: true
+
 baseurl: "" # the subpath of your site, e.g. /blog
+#change this!!
 url: "https://jamigibbs.github.io/phantom" # the base hostname & protocol for your site, e.g. https://example.com
-twitter_username: 'jamigibbs'
-github_username: 'jamigibbs'
-medium_username: 'blog.jamigibbs.com'
+twitter_username: 'mallikathinks'
+github_username: 'mallikaparulekar'
+linkedin_username: 'mallikaparulekar'
+# medium_username: 
 
 # Build settings
 markdown: kramdown
@@ -89,13 +92,13 @@ pagination:
 ############################################################
 
 ### Phantom settings
-footer_text: '© 2018 Jami Gibbs'
-admin_name: 'Jami Gibbs'
-google_analytics: "UA-9999999-99" # Update with your own tracking ID
+# footer_text: 
+# admin_name: 
+# google_analytics: # Update with your own tracking ID
 enable_contact: false
 
 #### Phantom Navigation menu
-enable_nav: true
+enable_nav: false
 nav_item:
-  - { url: '/', text: 'Home' }
-  - { url: '/about', text: 'About' }
+  # - { url: '/', text: 'Home' }
+  # - { url: '/about', text: 'About' }
